# Operating_systems

Course_work/: CMakeLists.txt  buddy.cpp  buddy.h  buddy_output.txt  consts.h  main.cpp  twon.cpp  twon.h  twon_output.txt  Пирязев Михаил отчет по курсовой работе.odt  сравнение аллокаторов.xlsx
OS_lab1/: child.out  f1  f2  input.txt  laba3.c  laba_child3.c  main  Текстовый документ.txt
OS_lab2/: constants  main  main.c
OS_lab3/: child.out  file1.txt  file2.txt  input.txt  lab3.c  lab3_child.c  main.out
OS_lab4/lab4/: constants.h  dynamic  dynamic.c  first_lib.c  lib.h  second_lib.c  static.c  static_first  static_second
OS_lab5-7/os/: child  child.cpp  main  main.cpp
OS_lab8/: constants  constants.h  main  output.txt
